# eventyay-interpretation

./: .gitignore  .gitlab-ci.yml  .update-locales.sh  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
interpretation/: apps.py  forms.py  models.py  services.py  settings.py  signals.py  susi.py  urls.py  utils.py  views.py
interpretation/locale/de_Informal/LC_MESSAGES/: django.po
interpretation/migrations/: 0002_move_connection_to_event_settings.py  0003_rename_hls_url_stream_url.py
interpretation/templates/interpretation/: dashboard.html  room_config.html  rooms.html  video_admin_settings.html
tests/: conftest.py  test_forms.py  test_rooms.py  test_settings.py  test_susi_client.py
