[project]
name = "eventyay-interpretation"
dynamic = ["version"]
description = "A plugin for live interpretation of video streams"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["Eventyay"]
authors = [
    {name = "FOSSASIA", email = "support@eventyay.com"},
]
maintainers = [
    {name = "eventyay team", email = "support@eventyay.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
interpretation = "interpretation:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/fossasia/eventyay-interpretation"
repository = "https://github.com/fossasia/eventyay-interpretation"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "interpretation.__version__"}

[tool.setuptools.packages.find]
include = ["interpretation*"]
namespaces = false
