[project]
name = "eventyay-interpretation"
dynamic = ["version"]
description = "A plugin for live interpretation of video streams"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["Eventyay"]
authors = [
    {name = "FOSSASIA", email = "support@eventyay.com"},
]
maintainers = [
    {name = "eventyay team", email = "support@eventyay.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
interpretation = "interpretation:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/fossasia/eventyay-interpretation"
repository = "https://github.com/fossasia/eventyay-interpretation"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "interpretation.__version__"}

[tool.setuptools.packages.find]
include = ["interpretation*"]
namespaces = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "eventyay.config.settings"

[tool.pytest_env]
EVY_RUNNING_ENVIRONMENT = "testing"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["migrations", ".ropeproject", "static", "_static", "build"]

[tool.ruff.lint]
# Mirror the previous flake8 default checks (E/F/W) plus isort (I).
select = ["E", "F", "W", "I"]
# E402: module level import not at top of file (was ignored under flake8).
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["interpretation"]
known-third-party = ["pretix"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
